samples/_failures_safe/1761717666_09cc3f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_edccd67f.c: In function ‘print_entries_by_level’:
./samples/SAFE/__tmp_edccd67f.c:143:9: error: expected declaration or statement at end of input
  143 |         printf("No %s entries found.\n", level_names[target_level]);
      |         ^~~~~~
./samples/SAFE/__tmp_edccd67f.c:143:9: error: expected declaration or statement at end of input
